# Vtubeee

./: .gitignore  README.md  pyproject.toml  requirements-avatar-state-server.txt  requirements-avatar-state.txt  requirements-runtime.txt  requirements-yolo-server.txt  requirements-yolo.txt
docs/: main.md  vtube_studio.md
scripts/: debug_paired_virtual_camera_bbox.py  inspect_bbox_lmdb.py  vts_static_then_motion.py  vts_virtual_camera_capture.py
src/dataset/: __init__.py  bbox_dataset_sampler.py  export_lmdb_to_yolo.py  utils.py
src/training/: __init__.py
src/training/avatar_state/: __init__.py  dataset.py  model_builder.py  timm_wrapper.py  train.py  val.py
src/training/yolo/: __init__.py  train_bbox.py
src/vtuber/: __init__.py
src/vtuber/avatar/: __init__.py  avatar.py  avatar_profile.py  avatar_state.py  avatar_transform.py  capture.py
src/vtuber/avatar_profiles/: Emilia.vtube.json  akari.vtube.json  hiyori.vtube.json  yiyi_chair.vtube.json
src/vtuber/vtube_studio/: __init__.py  avatar_driver.py  mapper.py  runtime.py  vtube_client.py
tests/: test_avatar_state.py  test_model_shapes.py  test_schema.py  test_vtube_mapper.py
